changed links to https, renamed icons again

--- a/06.html
+++ b/06.html
@@ -43,7 +43,7 @@
 
 <!-- DON'T TOUCH THIS SECTION -->
 <!-- link for googlewebfonts in css -->
-<link href='http://fonts.googleapis.com/css?family=Poiret+One|Syncopate:400,700|Limelight|Dr+Sugiyama' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Poiret+One|Syncopate:400,700|Limelight|Dr+Sugiyama' rel='stylesheet' type='text/css'>
 <!-- end for googlewebfonts in css -->
 
 <link rel="stylesheet" type="text/css" href="css/work.css">
@@ -94,7 +94,7 @@
 			<!-- ************* <Augment> ************* 
 				<h6><div class="augment_button" onclick="return false;" data-model3d_uuid="2d27d77d-c324-41b3-98fa-4c02f05c1350"><span>purple tentacle</span>
 				</div>
-				<script>(function() { var myScript = document.createElement("script"); myScript.type = "text/javascript"; myScript.id = "augmentButtonScript"; myScript.src = "http://agmt.it/generate/button/buttonAction.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(myScript, s); })();</script></h6>
+				<script>(function() { var myScript = document.createElement("script"); myScript.type = "text/javascript"; myScript.id = "augmentButtonScript"; myScript.src = "https://agmt.it/generate/button/buttonAction.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(myScript, s); })();</script></h6>
 			<!-- ************* </Augment> ************* -->
 		
 		<p>(Berlin, 2012)</p><!-- Image place and year -->  
@@ -104,10 +104,10 @@
 		<p>(Berlin, 2011)</p><!-- Image place and year -->
 		<br><br>
 		<img src="images/work/06/03.png" alt="03"><!-- Use whatever images you like - they will automatically fit the width of the page -->
-        <h5>just a little bot bunny based on David Revoy's <a href="http://www.davidrevoy.com/article103/little-bot-bunny-free-3d-model-sheet">modelsheet</a> / 3D Studio Max</h5><!-- Image title -->
+        <h5>just a little bot bunny based on David Revoy's <a href="https://www.davidrevoy.com/article103/little-bot-bunny-free-3d-model-sheet">modelsheet</a> / 3D Studio Max</h5><!-- Image title -->
 		<p>(Berlin, 2012)</p><!-- Image place and year -->
 		<br><br>
-		<iframe class="vimeo" src="http://player.vimeo.com/video/63517001?color=ff9933&amp;loop=1" alt="sorry! we're working on it..." width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		<iframe class="vimeo" src="https://player.vimeo.com/video/63517001?color=ff9933&amp;loop=1" alt="sorry! we're working on it..." width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         <h5>cat (turntable animation) / 3D Studio Max, Premiere</h5><!-- Video title -->
 		<p>(Berlin, 2011)</p><!-- Video place and year -->
 		<br><br>
@@ -119,7 +119,7 @@
         <h5>alien based on invader zim / 3D Studio Max</h5><!-- Image title -->
 		<p>(Berlin, 2012)</p><!-- Image place and year -->
 		<br><br>
-		<iframe class="vimeo" src="http://player.vimeo.com/video/63509549?color=ff9933&amp;loop=1" alt="sorry! we're working on it..." width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		<iframe class="vimeo" src="https://player.vimeo.com/video/63509549?color=ff9933&amp;loop=1" alt="sorry! we're working on it..." width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         <h5>alien (animation test) / 3D Studio Max, Premiere</h5><!-- Video title -->
 		<p>(Berlin, 2012)</p><!-- Video place and year -->
 		<br><br>
@@ -228,13 +228,13 @@
 <!-- DON'T TOUCH THIS SECTION END -->        
         
     	<section class="center social"> <!-- Right Social Icons Start -->
-		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="images/icons/mail.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://plus.google.com/109632776788428150696"><img class="icon" src="images/icons/google.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="images/icons/youtube.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://vimeo.com/ndbiller"><img class="icon" src="images/icons/vimeo.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
-         <a href="http://facebook.com/ndbiller"><img class="icon" src="images/icons/facebook.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="http://twitter.com/ndbiller"><img class="icon" src="images/icons/twitter.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://www.mixcloud.com/ndbiller/"><img class="icon" src="images/icons/mixcloud.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="images/icons/mail_256.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://plus.google.com/109632776788428150696"><img class="icon" src="images/icons/google_256.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="images/icons/youtube_256.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://vimeo.com/ndbiller"><img class="icon" src="images/icons/vimeo_256.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
+         <a href="https://facebook.com/ndbiller"><img class="icon" src="images/icons/facebook_256.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://twitter.com/ndbiller"><img class="icon" src="images/icons/twitter_256.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://www.mixcloud.com/ndbiller/"><img class="icon" src="images/icons/mixcloud_256.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
         </section> <!-- Social Icons End -->
     </div>
     <div class="clearfix"></div>
