--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!-- DON'T TOUCH THIS SECTION -->
 
 <!-- link for googlewebfonts in css -->
-<link href='http://fonts.googleapis.com/css?family=Poiret+One|Syncopate:400,700|Limelight|Dr+Sugiyama' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Poiret+One|Syncopate:400,700|Limelight|Dr+Sugiyama' rel='stylesheet' type='text/css'>
 <!-- end for googlewebfonts in css -->
 
 <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -108,15 +108,15 @@
     
     <aside id="about" class="left"> <!-- Text Section Start -->
     	<h3>about me</h3><!-- Replace all text with what you want -->
-		<p>Hi, my name is Andreas Biller. I'm an independent 3d-artist and gamedesigner, currently looking for work. I love everything strange, the world of animation, playing games, reading comics and the internet. I live and work in Berlin.</p>
+		<p>Hi, my name is Andreas Biller. I'm a software developer, 3d-artist and gamedesigner, currently working for Doctena Germany GmbH. I live and work in Berlin.</p>
 		
 		<br>
 		
-    	<p>Over the last couple of years I was able to developed and hone a wide range of technical and artistical skills for the project based work of the entertainment and gaming industry. They include:</p>
+    	<p>Over the last couple of years I was able to developed and hone a wide range of technical and artistical skills designing web applications and working on different projects in the entertainment and gaming industry. They include:</p>
 		
 		<br>
 		
-		<p id="software"> 3d Studio Max / Mudbox / Photoshop / Illustrator / Premiere / AfterEffects / Flash / Actionscript / Reaper / Unity / C# / Java / html / php / C++ </P>
+		<p id="software"> 3d Studio Max / Mudbox / Photoshop / Illustrator / Premiere / AfterEffects / Unity / ruby / rails / C# / Javascript / html / css </P>
     </aside>
     <aside class="right">
     	<h3>my work</h3>
@@ -215,13 +215,13 @@
 <!-- DON'T TOUCH THIS SECTION END -->        
         
     	<section class="center social"> <!-- Right Social Icons Start -->
-		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="images/icons/mail.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://plus.google.com/109632776788428150696"><img class="icon" src="images/icons/google.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="images/icons/youtube.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://vimeo.com/ndbiller"><img class="icon" src="images/icons/vimeo.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
-         <a href="http://facebook.com/ndbiller"><img class="icon" src="images/icons/facebook.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="http://twitter.com/ndbiller"><img class="icon" src="images/icons/twitter.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://www.mixcloud.com/ndbiller/"><img class="icon" src="images/icons/mixcloud.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="images/icons/mail_256.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://plus.google.com/109632776788428150696"><img class="icon" src="images/icons/google_256.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="images/icons/youtube_256.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://vimeo.com/ndbiller"><img class="icon" src="images/icons/vimeo_256.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
+         <a href="https://facebook.com/ndbiller"><img class="icon" src="images/icons/facebook_256.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://twitter.com/ndbiller"><img class="icon" src="images/icons/twitter_256.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://www.mixcloud.com/ndbiller/"><img class="icon" src="images/icons/mixcloud_256.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
         </section> <!-- Social Icons End -->
     </div>
     <div class="clearfix"></div>
