--- a/01.html
+++ b/01.html
@@ -16,7 +16,7 @@
 <!-- END OF Website description -->
 
 <!-- link for googlewebfonts in css -->
-<link href='http://fonts.googleapis.com/css?family=Poiret+One|Syncopate:400,700|Limelight|Dr+Sugiyama' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Poiret+One|Syncopate:400,700|Limelight|Dr+Sugiyama' rel='stylesheet' type='text/css'>
 <!-- end for googlewebfonts in css -->
 
 <link rel="stylesheet" type="text/css" href="css/work.css">
@@ -120,7 +120,7 @@
         <h5>Storyboard 11 / Photoshop</h5><!-- Image title -->
 		<p>(Berlin, 2012)</p><!-- Image place and year -->
 		<br><br>
-		<iframe class="vimeo" src="http://player.vimeo.com/video/52580805?color=ff9933" alt="sorry! we're working on it..." width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+		<iframe class="vimeo" src="https://player.vimeo.com/video/52580805?color=ff9933" alt="sorry! we're working on it..." width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
         <h5>intro movie (beta version) / 3D Studio Max, Premiere, AfterEffects, Reaper</h5><!-- Video title -->
 		<p>(Berlin, 2012)</p><!-- Video place and year -->
 		<br><br>
@@ -220,13 +220,13 @@
 <!-- DON'T TOUCH THIS SECTION END -->        
         
     	<section class="center social"> <!-- Right Social Icons Start -->
-		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="images/icons/mail.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://plus.google.com/109632776788428150696"><img class="icon" src="images/icons/google.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="images/icons/youtube.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://vimeo.com/ndbiller"><img class="icon" src="images/icons/vimeo.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
-         <a href="http://facebook.com/ndbiller"><img class="icon" src="images/icons/facebook.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="http://twitter.com/ndbiller"><img class="icon" src="images/icons/twitter.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://www.mixcloud.com/ndbiller/"><img class="icon" src="images/icons/mixcloud.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="./images/icons/mail_256.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://plus.google.com/109632776788428150696"><img class="icon" src="./images/icons/google_256.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="./images/icons/youtube_256.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://vimeo.com/ndbiller"><img class="icon" src="./images/icons/vimeo_256.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
+         <a href="https://facebook.com/ndbiller"><img class="icon" src="./images/icons/facebook_256.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://twitter.com/ndbiller"><img class="icon" src="./images/icons/twitter_256.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://www.mixcloud.com/ndbiller/"><img class="icon" src="./images/icons/mixcloud_256.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
         </section> <!-- Social Icons End -->
     </div>
     <div class="clearfix"></div>
