--- a/09.html
+++ b/09.html
@@ -43,7 +43,7 @@
 
 <!-- DON'T TOUCH THIS SECTION -->
 <!-- link for googlewebfonts in css -->
-<link href='http://fonts.googleapis.com/css?family=Poiret+One|Syncopate:400,700|Limelight|Dr+Sugiyama' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Poiret+One|Syncopate:400,700|Limelight|Dr+Sugiyama' rel='stylesheet' type='text/css'>
 <!-- end for googlewebfonts in css -->
 
 <link rel="stylesheet" type="text/css" href="css/work.css">
@@ -193,13 +193,13 @@
 <!-- DON'T TOUCH THIS SECTION END -->        
         
     	<section class="center social"> <!-- Right Social Icons Start -->
-		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="images/icons/mail.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://plus.google.com/109632776788428150696"><img class="icon" src="images/icons/google.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="images/icons/youtube.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://vimeo.com/ndbiller"><img class="icon" src="images/icons/vimeo.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
-         <a href="http://facebook.com/ndbiller"><img class="icon" src="images/icons/facebook.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="http://twitter.com/ndbiller"><img class="icon" src="images/icons/twitter.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="http://www.mixcloud.com/ndbiller/"><img class="icon" src="images/icons/mixcloud.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="images/icons/mail_256.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://plus.google.com/109632776788428150696"><img class="icon" src="images/icons/google_256.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="images/icons/youtube_256.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://vimeo.com/ndbiller"><img class="icon" src="images/icons/vimeo_256.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
+         <a href="https://facebook.com/ndbiller"><img class="icon" src="images/icons/facebook_256.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://twitter.com/ndbiller"><img class="icon" src="images/icons/twitter_256.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://www.mixcloud.com/ndbiller/"><img class="icon" src="images/icons/mixcloud_256.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
         </section> <!-- Social Icons End -->
     </div>
     <div class="clearfix"></div>
