fixed image links

--- a/10.html
+++ b/10.html
@@ -96,11 +96,11 @@
         <h5>vector graphics / Illustrator</h5><!-- Image title -->
 		<p>(Berlin, 2011)</p><!-- Image place and year -->
 		<br><br>
-        <img src="images/work/10/03.JPG" alt="03"><!-- Use whatever images you like - they will automatically fit the width of the page -->
+        <img src="images/work/10/03.jpg" alt="03"><!-- Use whatever images you like - they will automatically fit the width of the page -->
         <h5>image manipulation test / Photoshop</h5><!-- Image title -->
 		<p>(Berlin, 2011)</p><!-- Image place and year -->
 		<br><br>
-		<img src="images/work/10/04.JPG" alt="04"><!-- Use whatever images you like - they will automatically fit the width of the page -->
+		<img src="images/work/10/04.jpg" alt="04"><!-- Use whatever images you like - they will automatically fit the width of the page -->
         <h5>image manipulation / Photoshop</h5><!-- Image title -->
 		<p>(Berlin, 2011)</p><!-- Image place and year -->
 		<br><br>
