updated introduction, renamed git icon

--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
 		
 		<br>
 		
-    	<p>Over the last couple of years I was able to developed and hone a wide range of technical and artistical skills designing web applications and working on different projects in the entertainment and gaming industry. They include:</p>
+    	<p>Over the last couple of years I was able to develop and hone a wide range of technical and artistical skills designing web applications and working on projects in the entertainment and gaming industry.</p>
 		
 		<br>
 		
-		<p id="software"> 3d Studio Max / Mudbox / Photoshop / Illustrator / Premiere / AfterEffects / Unity / ruby / rails / C# / Javascript / html / css </P>
+		<p id="software">  They include: 3d Studio Max | Mudbox | Photoshop | Illustrator | Premiere | AfterEffects | Unity 3D | ruby on rails | C# | HTML | Javascript | ... </P>
     </aside>
     <aside class="right">
     	<h3>my work</h3>
-    	<p>You can find examples of my previous work below. While some of the content is still undergoing construction I hope you like what's here so far.</p>
+    	<p>You can find some examples of my previous work below. The content is still undergoing construction but I hope you like what is here so far.</p>
 		
 		<br>
 		
-		<p>Have something I can help you with? Don't know if it's even possible? Shortly describe me your project and problem and I'll get back to you. Other questions? Feel free to ask. </p>
+		<p>Have something I can help you with? Don't know if it's even possible? Shortly describe your project or problem and I'll get back to you. Feel free to ask... </p>
     </aside>
     
 	
