--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@
 <!-- DON'T TOUCH THIS SECTION END -->        
         
     	<section class="center social"> <!-- Right Social Icons Start -->
-		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="images/icons/mail_256.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="https://plus.google.com/109632776788428150696"><img class="icon" src="images/icons/google_256.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="mailto:andie.biller@gmail.com"><img class="icon" src="./images/icons/mail_256.png" width="64" height="64" alt="contact"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://plus.google.com/109632776788428150696"><img class="icon" src="./images/icons/google_256.png" width="64" height="64" alt="google"></a><!-- Replace with any 32px x 32px icons -->
         <a href="https://github.com/ndbiller"><img class="icon" src="./images/icons/git_256.png" width="64" height="64" alt="github"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="images/icons/youtube_256.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="https://vimeo.com/ndbiller"><img class="icon" src="images/icons/vimeo_256.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
-         <a href="https://facebook.com/ndbiller"><img class="icon" src="images/icons/facebook_256.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
-        <a href="https://twitter.com/ndbiller"><img class="icon" src="images/icons/twitter_256.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
-		<a href="https://www.mixcloud.com/ndbiller/"><img class="icon" src="images/icons/mixcloud_256.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://www.youtube.com/user/ndbiller"><img class="icon" src="./images/icons/youtube_256.png" width="64" height="64" alt="youtube"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://vimeo.com/ndbiller"><img class="icon" src="./images/icons/vimeo_256.png" width="64" height="64" alt="vimeo"></a><!-- Replace with any 32px x 32px icons -->
+         <a href="https://facebook.com/ndbiller"><img class="icon" src="./images/icons/facebook_256.png" width="64" height="64" alt="facebook"></a><!-- Replace with any 32px x 32px icons -->
+        <a href="https://twitter.com/ndbiller"><img class="icon" src="./images/icons/twitter_256.png" width="64" height="64" alt="twitter"></a><!-- Replace with any 32px x 32px icons -->
+		<a href="https://www.mixcloud.com/ndbiller/"><img class="icon" src="./images/icons/mixcloud_256.png" width="64" height="64" alt="mixcloud"></a><!-- Replace with any 32px x 32px icons -->
         </section> <!-- Social Icons End -->
     </div>
     <div class="clearfix"></div>
