--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		
 		<br>
 		
-		<p id="software">  They include: 3d Studio Max | Mudbox | Photoshop | Illustrator | Premiere | AfterEffects | Unity 3D | ruby on rails | C# | HTML | Javascript | ... </P>
+		<p id="software">  They include working with: 3d Studio Max | Mudbox | Realflow | Photoshop | Illustrator | Premiere | AfterEffects | Unity 3D | C# | Ruby | Rails | HTML | CSS | Javascript | Bootstrap | Windows | Linux | etc. </P>
     </aside>
     <aside class="right">
     	<h3>my work</h3>
@@ -124,7 +124,11 @@
 		
 		<br>
 		
-		<p>Have something I can help you with? Don't know if it's even possible? Shortly describe your project or problem and I'll get back to you. Feel free to ask... </p>
+		<p>Have something I can help you with? Don't know if it's even possible? Shortly describe your project or specific problem and I'll get back to you.</p>
+
+        <br>
+
+        <p>Feel free to <a href="mailto:andie.biller@gmail.com">ask</a>.</p>
     </aside>
     
 	
