--- a/05.html
+++ b/05.html
@@ -107,65 +107,67 @@
 	<p id="back" align=center><a href="index.html">back</a></p>
 	<br>
 	<br>
-    	<div class="item">
+	<div class="work-center">
+    		<div class="item">
         	<a href="01.html"><img src="images/work/thumbs/01.png" alt="image 01"></a><!-- Image must be 400px by 300px -->
-            <h3>beyond the moon</h3><!--Title-->
-            <p>Unity / 3DS Max / etc.</p><!--Category-->
-        </div><!--/item-->
+            	<h3>beyond the moon</h3><!--Title-->
+            	<p>Unity / 3DS Max / etc.</p><!--Category-->
+        	</div><!--/item-->
         
-        <div class="item">
+        	<div class="item">
         	<a href="02.html"><img src="images/work/thumbs/02.png" alt="image 02"></a><!-- Image must be 400px by 300px -->
-            <h3>love²</h3><!--Title-->
-            <p>3DS Max / Premiere / etc.</p><!--Category-->
-        </div><!--/item-->
+            	<h3>love²</h3><!--Title-->
+            	<p>3DS Max / Premiere / etc.</p><!--Category-->
+        	</div><!--/item-->
 		
 		<div class="item">
         	<a href="03.html"><img src="images/work/thumbs/03.png" alt="image 03"></a><!-- Image must be 400px by 300px -->
-            <h3>catsoup</h3><!--Title-->
-            <p>3DS Max / AfterEffects / etc.</p><!--Category-->
-        </div><!--/item-->
+            	<h3>catsoup</h3><!--Title-->
+            	<p>3DS Max / AfterEffects / etc.</p><!--Category-->
+        	</div><!--/item-->
 		
 		<div class="item">
         	<a href="04.html"><img src="images/work/thumbs/04.png" alt="image 04"></a><!-- Image must be 400px by 300px -->
-            <h3>game of stones</h3><!--Title-->
-            <p>3DS Max / Unity / C#</p><!--Category-->
-        </div><!--/item-->
+            	<h3>game of stones</h3><!--Title-->
+            	<p>3DS Max / Unity / C#</p><!--Category-->
+        	</div><!--/item-->
 		
 		<div class="item">
         	<a href="05.html"><img src="images/work/thumbs/05.png" alt="image 05"></a><!-- Image must be 400px by 300px -->
-            <h3>simple games</h3><!--Title-->
-            <p>3DS Max / Unity / C#</p><!--Category-->
-        </div><!--/item-->
+            	<h3>simple games</h3><!--Title-->
+            	<p>3DS Max / Unity / C#</p><!--Category-->
+        	</div><!--/item-->
 		
 		<div class="item">
         	<a href="06.html"><img src="images/work/thumbs/06.png" alt="image 06"></a><!-- Image must be 400px by 300px -->
-            <h3>character design</h3><!--Title-->
-            <p>3DS Max / Mudbox / etc.</p><!--Category-->
-        </div><!--/item-->
+            	<h3>character design</h3><!--Title-->
+            	<p>3DS Max / Mudbox / etc.</p><!--Category-->
+        	</div><!--/item-->
 		
 		<div class="item">
         	<a href="07.html"><img src="images/work/thumbs/07.png" alt="image 07"></a><!-- Image must be 400px by 300px -->
-            <h3>videogame assets</h3><!--Title-->
-            <p>3DS Max / Photoshop</p><!--Category-->
-        </div><!--/item-->
+            	<h3>videogame assets</h3><!--Title-->
+            	<p>3DS Max / Photoshop</p><!--Category-->
+        	</div><!--/item-->
 		
 		<div class="item">
         	<a href="08.html"><img src="images/work/thumbs/08.png" alt="08"></a><!-- Image must be 400px by 300px -->
-            <h3>visualizing spaces</h3><!--Title-->
-            <p>3DS Max / Premiere</p><!--Category-->
-        </div><!--/item-->
+            	<h3>visualizing spaces</h3><!--Title-->
+            	<p>3DS Max / Premiere</p><!--Category-->
+        	</div><!--/item-->
 		
 		<div class="item">
         	<a href="09.html"><img src="images/work/thumbs/09.png" alt="image 09"></a><!-- Image must be 400px by 300px -->
-            <h3>matte painting</h3><!--Title-->
-            <p>3DS Max / Photoshop</p><!--Category-->
-        </div><!--/item-->
+            	<h3>matte painting</h3><!--Title-->
+           	<p>3DS Max / Photoshop</p><!--Category-->
+        	</div><!--/item-->
 		
 		<div class="item">
         	<a href="10.html"><img src="images/work/thumbs/10.png" alt="10"></a><!-- Image must be 400px by 300px -->
-            <h3>pixels & vectors</h3><!--Title-->
-            <p>Photoshop / Illustrator</p><!--Category-->
-        </div><!--/item-->
+ 	        <h3>pixels & vectors</h3><!--Title-->
+            	<p>Photoshop / Illustrator</p><!--Category-->
+        	</div><!--/item-->
+    	</div><!--/work-center-->
         
         <div class="clearfix"></div>
     </section> <!-- Work Links Section End -->
