--- a/files/work/11/PUK/index.html
+++ b/files/work/11/PUK/index.html
@@ -13,6 +13,12 @@
         <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta name=apple-mobile-web-app-capable content=yes>
         <meta name=apple-mobile-web-app-status-bar-style content=black>
+        <!-- Hides mobile browser's address bar when page is done loading. -->
+        <script type='text/javascript' charset='utf-8'>
+              window.addEventListener('load', function(e) {
+                setTimeout(function() { window.scrollTo(0, 1); }, 1);
+              }, false);
+        </script>
         <!--    CSS laden   -->
         <link rel="stylesheet" type="text/css" href="css/main.css" media="all">
         <!--    Scripte laden   -->
