--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 
     <div id="bighead"></div><!-- the header for all portfolio pages: change content in the file header.html -->
 
-    <hr><!-- Horizontal Line -->
+    <hr>
 
     <header>	<!-- Header Title Start -->
         <h1 style="min-font-size: 150%;">Andreas Biller</h1>
-		<h2>3D-/Gamedesigner</h2>
+		<h2>mid-level full-stack web developer and junior 3D-/game designer</h2>
     </header>	<!-- Header Title End -->
 	<br>
     <section id="slideshow">	<!-- Slideshow Start -->
@@ -91,22 +91,20 @@
 
     <aside id="about" class="left"> <!-- Text Section Start -->
     	<h3>about me</h3><!-- Replace all text with what you want -->
-		<p>Hi, my name is Andreas Biller. I'm a software developer, 3d-artist and gamedesigner, currently working for Doctena Germany GmbH. I live and work in Berlin.</p>		
+		<p>Hi, my name is Andreas Biller. I'm a mid-level full-stack web developer and junior 3d-artist and independent game designer. I was working for the last 9 years for Doctena Germany GmbH. I currently live and look for work in Berlin.</p>		
 		<br>
-    	<p>Over the last couple of years I was able to develop and hone a wide range of technical and artistical skills designing web applications and working on projects in the entertainment and gaming industry.</p>		
+    	<p>Over the last couple of years I was able to develop and hone a wide range of technical and artistical skills designing interfaces for our business partners and developing additional features for our patient portal on the web at Doctena. And in my spare time I was working on some additional small projects in the entertainment and gaming industry with some friends.</p>		
 		<br>		
-		<p id="software">  They include working with: 3d Studio Max | Mudbox | Realflow | Photoshop | Illustrator | Premiere | AfterEffects | Unity 3D | C# | Ruby | Rails | HTML | CSS | Javascript | Bootstrap | Windows | Linux | etc. </P>
+		<p id="software">They include: PHP | Ruby | C# | Lua | Python | Laravel | Symfony | Rails | Jekyll | AWS | Docker | SQL | Redis | MongoDB | TDD | Clean Code | CI | Github | Confluence | Jira | Grafana | Datadog | HTML | CSS | Javascript | Bootstrap | Windows | Linux | 3d Studio Max | Mudbox | Realflow | Photoshop | Illustrator | Premiere | AfterEffects | Unity 3D</P>
     </aside>
     <aside class="right">
     	<h3>my work</h3>
     	<p>You can find some examples of my previous work below. The content is still undergoing construction but I hope you like what is here so far.</p>		
 		<br>		
-		<p>Have something I can help you with? Don't know if it's even possible? Shortly describe your project or specific problem and I'll get back to you.</p>
-        <br>
-        <p>Feel free to <a href="mailto:andie.biller@gmail.com">ask</a>.</p>
+		<p>Have something I can help you with? Do I fit your profile? Then get in touch with me via <a href="mailto:andie.biller@gmail.com">email</a>.</p>
     </aside>
 
-	<hr>	<!-- Horizontal Line -->
+	<hr>
 	
 	<div class="clearfix"></div> <!-- Text Section End -->
 
