--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <header>	<!-- Header Title Start -->
         <h1 style="min-font-size: 150%;">Andreas Biller</h1>
-		<h2>web developer and 3D-/game designer</h2>
+		<h2>web developer, 3D artist, independent game designer</h2>
     </header>	<!-- Header Title End -->
 	<br>
     <section id="slideshow">	<!-- Slideshow Start -->
