--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
 
     <aside id="about" class="left"> <!-- Text Section Start -->
     	<h3>about me</h3><!-- Replace all text with what you want -->
-		<p>Hi, my name is Andreas Biller. I'm a mid-level full-stack web developer and junior 3d-artist and independent game designer. I was working for the last 9 years for Doctena Germany GmbH. I currently live and look for work in Berlin.</p>		
+		<p>Hi, my name is Andreas Biller. I'm a mid-level full-stack web developer, junior 3d-artist and independent game designer. I was working for the last 9 years for Doctena Germany GmbH. I currently live and look for work in Berlin.</p>		
 		<br>
-    	<p>Over the last couple of years I was able to develop and hone a wide range of technical and artistical skills designing interfaces for our business partners and developing additional features for our patient portal on the web at Doctena. And in my spare time I was working on some additional small projects in the entertainment and gaming industry with some friends.</p>		
+    	<p>Over the last years I was able to develop and hone a wide range of technical and artistical skills designing interfaces for our business partners and developing features for our patient portal on the web at Doctena. In my spare time I was working on additional projects in the entertainment and gaming industry with some friends.</p>		
 		<br>		
-		<p id="software">They include: PHP | Ruby | C# | Lua | Python | Laravel | Symfony | Rails | Jekyll | AWS | Docker | SQL | Redis | MongoDB | TDD | Clean Code | CI | Github | Confluence | Jira | Grafana | Datadog | HTML | CSS | Javascript | Bootstrap | Windows | Linux | 3d Studio Max | Mudbox | Realflow | Photoshop | Illustrator | Premiere | AfterEffects | Unity 3D</P>
+		<p id="software">My skills include: PHP | Ruby | C# | Lua | Python | Laravel | Symfony | Rails | Jekyll | AWS | Docker | SQL | Redis | MongoDB | TDD | Clean Code | CI | Github | Confluence | Jira | Grafana | Datadog | HTML | CSS | Javascript | Bootstrap | Windows | Linux | 3d Studio Max | Mudbox | Realflow | Photoshop | Illustrator | Premiere | AfterEffects | Unity 3D</P>
     </aside>
     <aside class="right">
-    	<h3>my work</h3>
-    	<p>You can find some examples of my previous work below. The content is still undergoing construction but I hope you like what is here so far.</p>		
+    	<h3>work</h3>
+    	<p>You can find examples of my private projects below. This content is still undergoing construction but I hope you like what you see here so far.</p>		
 		<br>		
-		<p>Have something I can help you with? Do I fit your profile? Then get in touch with me via <a href="mailto:andie.biller@gmail.com">email</a>.</p>
+		<p>Have a job I can help you with? Do I fit your profile? Then get in touch with me via <a href="mailto:andie.biller@gmail.com">email</a>.</p>
     </aside>
 
 	<hr>
